[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonraker-mcp"
version = "0.1.0"
description = "MCP server bridging Claude to the Moonraker 3D printer API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]

[project.scripts]
moonraker-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
